# QCCDSim

./: .gitignore  analyzer.py  analyzer_v7.py  ejf_schedule.py  gen.py  gen_qaoa_maxcut.py  instrumentation_report.json  machine.py  machine_state.py  mappers.py  maxcut.qasm  muss_schedule2.py  muss_schedule3.py  muss_schedule6.py  muss_schedule7.py  naive_schedule.py  paper_report_v7.py  parse.py  parse_output.py  pyproject.toml  rebalance.py  route.py  run.py  run_batch.py  run_batch_large.py  schedule.py  schedule_v7.py  sorted_collection.py  strict_repro.py  strict_repro_checks.py  test.ipynb  test.py  testQASM.ipynb  test_machines.py  utils.py
docs/: CLAUDE.md  MIGRATION_LOG.md  REFACTOR_PLAN.md
output/: summary.csv  summary.md
output_large/: manifest.csv  manifest.md  paper_architecture_comparison.csv  paper_architecture_comparison.md  paper_capacity_sweep.csv  paper_capacity_sweep.md  paper_lookahead_sweep.csv  paper_lookahead_sweep.md  paper_multi_zone.csv  paper_multi_zone.md  paper_results_v7.csv  paper_results_v7.md
programs/: Adder128.qasm  Adder64.qasm  BV128.qasm  BV32.qasm  BV64.qasm  GHZ128.qasm  GHZ256.qasm  GHZ32.qasm  QAOA128.qasm  QAOA32.qasm  QAOA64.qasm  QAOA_HEA64_circular_20.qasm  QAOA_HEA64_full_20.qasm  QAOA_HEA64_pairwise_20.qasm  QAOA_HEA64_reverse_linear_20.qasm  QAOA_HEA64_sca_20.qasm  QAOA_MaxCut64_20.qasm  QFT128.qasm  QFT32.qasm  QFT64.qasm  SQRT117.qasm  SQRT299.qasm  SQRT30.qasm  bv64.qasm  square_root_n4.qasm  square_root_n5.qasm  square_root_n6.qasm  square_root_n7.qasm  square_root_n8.qasm  square_root_n9.qasm
src/: __init__.py
(+28 files in other folders)
