[project]
name = "qccdsim"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "decorator==4.4.2",
    "joblib==0.17.0",
    # "networkx==2.5",
    "networkx>=3.1",
    "numpy==1.19.2",
    "scikit-learn==0.23.2",
    "scipy==1.5.2",
    "threadpoolctl==2.1.0",
    "qiskit==1.2.4",
    "graphviz==0.20.3",
    "pillow>=10.4.0",
    "pydot>=4.0.1",
]
