[project]
name = "qccdsim"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "decorator>=5.2.1",
    "ipykernel>=7.1.0",
    "joblib>=1.5.3",
    "matplotlib>=3.10.8",
    "networkx>=3.6.1",
    "numpy>=2.4.1",
    "pylatexenc>=2.10",
    "qiskit>=2.3.0",
    "scikit-learn>=1.8.0",
    "scipy>=1.17.0",
    "threadpoolctl>=3.6.0",
]
